# burnt_chroma

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  build-rust-debug.sh  build-rust.sh  build.rs  report.json  setup.sh
BurntChroma/: Package.swift  README.md
BurntChroma/RustFramework.xcframework/: Info.plist
BurntChroma/RustFramework.xcframework/ios-arm64/: libburnt_chroma.dylib
BurntChroma/RustFramework.xcframework/ios-arm64_x86_64-simulator/: libburnt_chroma.dylib
BurntChroma/RustFramework.xcframework/ios-arm64_x86_64-simulator/Headers/: burnt_chromaFFI.h  module.modulemap
BurntChroma/RustFramework.xcframework/macos-arm64_x86_64/: libburnt_chroma.dylib
BurntChroma/RustFramework.xcframework/macos-arm64_x86_64/Headers/: burnt_chromaFFI.h
BurntChroma/Sources/BurntChroma/: burnt_chroma.swift
BurntChroma/Sources/BurntChroma.xcframework/ios-arm64_x86_64-simulator/: Headers
RustFramework.xcframework/: Info.plist
RustFramework.xcframework/ios-arm64/: libburnt_chroma.dylib
RustFramework.xcframework/ios-arm64_x86_64-simulator/: libburnt_chroma.dylib
RustXcframework.xcframework/: Info.plist
RustXcframework.xcframework/ios-arm64/Headers/: module.modulemap
RustXcframework.xcframework/ios-arm64_x86_64-simulator/Headers/: burnt_chroma.h
RustXcframework.xcframework/macos-arm64_x86_64/Headers/: burnt_chroma.h
Sources/BurntChroma/: BurntChroma.swift
Sources/BurntChroma.xcframework/: Info.plist
Sources/SwiftBurntChroma/: burnt_chroma.swift
SwiftBurntChroma/RustXcframework.xcframework/: Info.plist
SwiftBurntChroma/Sources/SwiftBurntChroma/: burnt_chroma.swift
src/: image_format.proto  lib.rs  lib.udl  processor.rs
src/processor/: internal.rs
