[package]
name = "burnt_chroma"
version = "0.1.0"
edition = "2021"
description = "A general purpose image manipulation library"
readme = "README.md"
homepage = "https://jaspervaldivia.dev"
repository = "https://github.com/jasval/burnt_chroma"
license = "Apache-2.0"
keywords = ["anamorphic", "image", "desqueeze", "stretch"]
categories = ["multimedia::images", "multimedia", "graphics", "command-line-utilities", "external-ffi-bindings"]
exclude = ["src/tests"]

[lib]
name= "burnt_chroma"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[profile.release]
debug = false
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
image = "0.24.6"
tokio = { version = "1.29.1", features = ["macros"] }
swift-bridge = { version = "0.1.52", features = ["async"] }

[dev-dependencies]

[features]
debug_assertions = []
